Bump ktlint version