@@ -1,15 +1,15 @@
 val ktlint by configurations.creating
 
 dependencies {
-    ktlint("com.pinterest:ktlint:0.45.2") {
+    ktlint("com.pinterest.ktlint:ktlint-cli:1.3.1") {
         attributes {
             attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
         }
     }
-    // ktlint(project(":custom-ktlint-ruleset")) // in case of custom ruleset
+    ktlint("com.pinterest.ktlint:ktlint-ruleset-standard:1.3.1")
 }
 
-val outputDir = "${project.buildDir}/reports/ktlint/"
+val outputDir = layout.buildDirectory.dir("reports/ktlint/")
 val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
 
 val ktlintCheck by tasks.creating(JavaExec::class) {
@@ -20,6 +20,7 @@ val ktlintCheck by tasks.creating(JavaExec::class) {
     classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args = listOf("src/**/*.kt")
+    jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
 
 val ktlintFormat by tasks.creating(JavaExec::class) {
@@ -30,6 +31,5 @@ val ktlintFormat by tasks.creating(JavaExec::class) {
     classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args = listOf("-F", "src/**/*.kt")
-    // jvmArgs = listOf("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-    // jvmArgs = listOf("--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED")
+    jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
